<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/image_upload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/image_upload"
            android:textColor="@color/cardview_light_background" />

        <EditText
            android:id="@+id/edit_profile_firstname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/profile_firstname"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edit_profile_lastname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/profile_lastname"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edit_profile_birth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/profile_birth"
            android:textAlignment="center"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edit_profile_hometown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/profile_hometown"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edit_profile_bio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/profile_bio"
            android:textAlignment="center" />

        <Button
            android:id="@+id/edit_profile_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/edit_profile_submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</FrameLayout>